# Prophymate.github.io

./: CMakeCache.txt  CMakeLists.txt  CMakePresets.json  build.ninja  cmake_install.cmake
.github/workflows/: cmake-single-platform.yml  static.yml
Docs/: Doxyfile
Docs/html/: _c_make_ninja_8cpp.html  _c_make_ninja_8cpp_source.html  _c_make_ninja_8h.html  _c_make_ninja_8h__incl.dot  _c_make_ninja_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  files.html  graph_legend.html  index.html  navtreedata.js  navtreeindex0.js
src/: CMakeNinja.cpp
